fix too much height of flashs surrounding div

--- a/public/stylesheets/layout_2008-07/content.css
+++ b/public/stylesheets/layout_2008-07/content.css
@@ -242,6 +242,11 @@ form
 	color: #999;
 }
 
+.demo_video object
+{
+  float: left;
+}
+
 .demo_video #player a
 {
 	display: block;
